@@ -1,3 +1,7 @@
+Thu Dec  8 11:37:29 CET 2005 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/algos3d/SwapEdge.java: New algorithm to swap an edge if its adjacent faces are coplanar.
+
 Fri Dec  2 18:30:07 CET 2005 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/Vertex.java
